tests/derive_ui/enum_flatten.stderr
error: invalid variant for `#[command(flatten)]`, expected newtype variant
  --> tests/derive_ui/enum_flatten.rs:14:5
   |
14 | /     #[command(flatten)]
15 | |     Variant1,
   | |____________^
